--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,1 +1,22 @@
+<% @products.each do |p| %>
+  <h3><%= p.name %></h3>
+  <p id = "description-<%=p.id%>"> <%= truncate p.description %> </p>
+  <div id="inventory-<%= p.id %>"></div>
+  <button class="js-more" data-id="<%= p.id %>">More Info</button>
+<% end %>
 
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-more").on('click', function() {
+    let id = $(this).data("id");
+
+    $.get("/products/" + id + "/description", function(data) {
+      $("#description-" + id).text(data);
+    });
+
+    $.get("/products/" + id + "/inventory", function(data) {
+      console.log(data === "false" ? "Sold Out" : "Available")
+    });
+  });
+});
+</script>
